--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/aiotrope/orphic#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -34,6 +35,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.11.2",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "winston": "^3.9.0",
     "yup": "^1.2.0"
   },
